--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,16 @@
             <artifactId>mockito-core</artifactId>
             <version>1.10.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-module-junit4</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.powermock</groupId>
+            <artifactId>powermock-api-mockito</artifactId>
+            <version>1.5.6</version>
+        </dependency>
     </dependencies>
 
 </project>
